# applied_statistics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  prod.yml
api/: app.py  schemas.py
configs/: params.yaml
deployment/: argocd-application.yaml  kubernetes.yaml
notebooks/: eda.ipynb
src/: utils.py
src/data/: load.py  preprocess.py
src/models/: evaluate.py  train.py
tests/: test_preprocess.py
