[project]
name = "obesity-classification"
version = "0.1.0"
description = "Ordinal classification of obesity levels — MLOps project"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
