[project]
name = "obesity-classification"
version = "0.1.0"
description = "Ordinal classification of obesity levels — MLOps project"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
